<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ecos.uniandes.davidmtz.patientapplication.MainActivity"
    android:id="@+id/txtViewTitle">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:fillViewport="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/doYourReport"
                android:textStyle="bold"
                android:textSize="22sp"
                android:id="@+id/reportTitleTxtV"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/txtViewDate"
                android:layout_below="@+id/reportTitleTxtV"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/date"
                android:clickable="true"
                android:enabled="true"
                android:layout_below="@+id/txtViewDate"
                android:layout_marginTop="7dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:id="@+id/txtViewTime"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_below="@+id/date"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/time"
                android:layout_below="@+id/txtViewTime"
                android:clickable="true"
                android:enabled="true"
                android:layout_marginTop="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/medicament"
                android:id="@+id/medicament"
                android:maxLength="300"
                android:singleLine="true"
                android:layout_below="@+id/time"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity"
                android:id="@+id/TxtViewActivity"
                android:textStyle="bold"
                android:layout_below="@+id/medicament"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/activity"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/TxtViewActivity"
                android:layout_marginTop="7dp">
                <RadioButton android:id="@+id/exercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/repose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest"
                    android:onClick="onRadioButtonClicked"
                    android:checked="true" />
                <RadioButton android:id="@+id/work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/intensity"
                android:id="@+id/TxtViewIntensity"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/activity"
                android:layout_marginTop="10dp"/>

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/intensity"
                android:max="10"
                android:indeterminate="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/TxtViewIntensity"
                android:layout_marginTop="7dp"/>

            <Button
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:onClick="event_Click"
                android:id="@+id/button"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/intensity"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
